tdf#98787: Crash after showing mailmerge toolbar and showing preview

Change-Id: I38034875a7175acd16e451e733c0d4c103c36eef